<resources>
    <!-- Login window fonts -->
    <string name="app_name">GIM</string>
    <string name="main_txt_email">e-Mail</string>
    <string name="main_txt_password">Password</string>
    <string name="main_txt_register">Sign Up</string>
    <string name="main_btn_join">Join</string>
    <string name="main_img_logo">GIM logo</string>
    <string name="main_txt_lang">EN / es</string>
    <string name="main_txt_logout">LogOut succesfully</string>

    <!-- Sign up window fonts -->
    <string name="reg_txt_registry">REGISTER</string>
    <string name="reg_txt_name">Name</string>
    <string name="reg_txt_email">e-Mail</string>
    <string name="reg_txt_password">Password</string>
    <string name="reg_txt_password2">Confirm Password</string>
    <string name="reg_btn_signup">Sign Up</string>
    <string name="reg_img_logo">GIM logo</string>
    <string name="reg_img_return">Return to the sign in screen</string>

    <!-- Employee menu fonts -->
    <string name="emenu_btn_menu">Menu button</string>
    <string name="emenu_btn_clients">Return button</string>
    <string name="emenu_btn_machines">Machines list button</string>
    <string name="emenu_btn_routines">Routines list button</string>
    <string name="emenu_btn_stats">Gim stats button</string>
    <string name="emenu_txt_routines">Routine`s list</string>
    <string name="emenu_txt_clients">Client`s list</string>
    <string name="emenu_txt_machines">Machine`s list</string>
    <string name="emenu_txt_stats">GIM stats</string>
    <string name="emenu_img_logo">GIM Logo</string>

    <!-- Employee profile screen fonts -->
    <string name="eprofile_btn_return">Return button</string>
    <string name="eprofile_txt_profile">Profile</string>
    <string name="eprofile_txt_pic">Change profile pic</string>
    <string name="eprofile_txt_chage_email">Change e-mail</string>
    <string name="eprofile_txt_password">Change password</string>
    <string name="eprofile_btn_exit">Log out</string>
    <string name="eprofile_img_user">User pic</string>
    <string name="eprofile_txt_username">Username</string>
    <string name="eprofile_txt_email">E-Mail</string>
    <string name="eprofile_txt_lang">Languaje ENGLISH / es</string>
    <string name="eprofile_txt_cMenu">Change to client menu</string>

    <!-- Client menu fonts -->
    <string name="cmenu_btn_menu">Menu button</string>
    <string name="cmenu_img_logo">GIM Logo</string>
    <string name="cmenu_btn_stats">Client Stats</string>
    <string name="cmenu_btn_add">Join routine</string>

    <!-- Client profile screen fonts -->
    <string name="cprofile_btn_return">Return button</string>
    <string name="cprofile_txt_pic">Change profile pic</string>
    <string name="cprofile_txt_change_email">Change email</string>
    <string name="cprofile_txt_password">Change password</string>
    <string name="cprofile_txt_lang">Languaje ENGLISH / es</string>
    <string name="cprofile_btn_exit">Log out</string>
    <string name="cprofile_txt_profile">Profile</string>
    <string name="cprofile_img_user">User pic</string>
    <string name="cprofile_txt_username">Username</string>
    <string name="cprofile_txt_email">E-mail</string>
    <string name="cprofile_txt_sub">Subscription</string>
    <string name="cprofile_txt_eMenu">Return to employee menu</string>

    <!-- Client list screen fonts -->
    <string name="clist_txt_header">Clients List</string>
    <string name="clist_btn_return">Return button</string>

    <!-- Machines list screen fonts -->
    <string name="mlist_txt_header">Machines List</string>
    <string name="mlist_btn_return">Return button</string>
    <string name="mlist_btn_add">Add machine</string>

    <!-- Routines list screen fonts -->
    <string name="rlist_txt_header">Routines list</string>
    <string name="rlist_btn_return">Return button</string>
    <string name="rlist_btn_add">Add routine</string>
    
    <!-- Gim stats screen fonts -->
    <string name="gimstats_txt_header">GIM Stats</string>
    <string name="gimstats_btn_return">Return button</string>

    <!-- App messages fonts -->
    <string name="main_msg_1">User dont exist</string>
    <string name="main_msg_2">E-mail not verified</string>
    <string name="main_msg_3">Couldnt start session</string>
    <string name="main_msg_4">E-mail not valid</string>
    <string name="main_msg_5">Error: Fill all the fields</string>

    <string name="reg_msg_1">Error registring user</string>
    <string name="reg_msg_2">Error: Password must contain more than 6 characters</string>
    <string name="reg_msg_3">Error: Confirm your password</string>
    <string name="reg_msg_4">E-mail not valid</string>
    <string name="reg_msg_5">Error: Fill all the fields</string>
    <string name="reg_msg_6">User registered\nVerify your email to start session</string>
    <string name="reg_msg_7">Error: Couldnt fill user data</string>
    <string name="reg_msg_8">Error: Couldnt create user</string>
</resources>