<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464646"
    tools:context=".employeeMenu" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/emenu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#1A1A1A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/emenu_btn_menu"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emenu_toolbar"
        android:layout_alignBottom="@+id/emenu_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/emenu_btn_menu"
        android:onClick="redirVerPerfil"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/img_btn_menu"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="7dp" />

    <ImageButton
        android:id="@+id/emenu_btn_machines"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/emenu_btn_routines"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/emenu_btn_machines"
        android:onClick="redirListaMaquinas"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_btn_machines" />

    <ImageButton
        android:id="@+id/emenu_btn_stats"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/emenu_btn_clients"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/emenu_btn_stats"
        android:onClick="redirGimStats"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_btn_stats" />

    <ImageButton
        android:id="@+id/emenu_btn_routines"
        android:layout_width="180sp"
        android:layout_height="180dp"
        android:layout_below="@+id/emenu_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/emenu_btn_routines"
        android:onClick="redirListaRutinas"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_btn_routines" />

    <ImageButton
        android:id="@+id/emenu_btn_clients"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/emenu_toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/emenu_btn_clients"
        android:onClick="redirListaClientes"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_btn_clients" />

    <TextView
        android:id="@+id/emenu_txt_routines"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emenu_btn_routines"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-76dp"
        android:background="#1A1A1A"
        android:fontFamily="@font/mitr_bold"
        android:text="@string/emenu_txt_routines"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/emenu_txt_clients"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emenu_btn_clients"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="-76dp"
        android:background="#1A1A1A"
        android:fontFamily="@font/mitr_bold"
        android:text="@string/emenu_txt_clients"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/emenu_txt_machines"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emenu_btn_machines"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-41dp"
        android:background="#1A1A1A"
        android:fontFamily="@font/mitr_bold"
        android:text="@string/emenu_txt_machines"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/emenu_txt_stats"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emenu_btn_stats"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-41dp"
        android:background="#1A1A1A"
        android:fontFamily="@font/mitr_bold"
        android:text="@string/emenu_txt_stats"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/emenu_img_logo"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emenu_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/emenu_img_logo"
        android:scaleType="center"
        app:srcCompat="@drawable/gim_logo2" />

</RelativeLayout>