<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464646"
    tools:context=".employeeProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/eprofile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#1A1A1A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/eprofile_btn_return"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:layout_alignTop="@id/eprofile_toolbar"
        android:layout_alignBottom="@id/eprofile_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/eprofile_btn_return"
        android:onClick="returnMenu"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/img_btn_return"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="7dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/eprofile_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@+id/eprofile_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#323232"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/eprofile_txt_profile"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="140dp"
        android:fontFamily="@font/averia_sans_libre_bold"
        android:saveEnabled="false"
        android:scrollHorizontally="false"
        android:text="@string/eprofile_txt_profile"
        android:textAlignment="center"
        android:textColor="#BEA055"
        android:textSize="40sp" />

    <Button
        android:id="@+id/eprofile_btn_exit"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="30dp"
        android:background="#640000"
        android:fontFamily="@font/mitr_bold"
        android:onClick="salir"
        android:text="@string/eprofile_btn_exit"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/eprofile_txt_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_info_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:onClick="cambiarFoto"
        android:text="@string/eprofile_txt_pic"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/eprofile_txt_change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_txt_pic"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:onClick="cambiarCorreo"
        android:text="@string/eprofile_txt_chage_email"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/eprofile_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_txt_change_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:onClick="cambiarPassword"
        android:text="@string/eprofile_txt_password"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/eprofile_txt_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_txt_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:onClick="cambiarLen"
        android:text="@string/eprofile_txt_lang"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/eprofile_txt_cMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_txt_lang"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:onClick="cambiarMenu"
        android:text="@string/eprofile_txt_cMenu"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/eprofile_img_user"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:layout_below="@+id/eprofile_toolbar"
        android:layout_alignBottom="@+id/eprofile_info_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/eprofile_img_user"
        android:scaleType="fitXY"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/eprofile_txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/eprofile_img_user"
        android:text="@string/eprofile_txt_username"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/eprofile_txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eprofile_toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/eprofile_img_user"
        android:text="@string/eprofile_txt_email"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF" />
</RelativeLayout>