<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=" "
    android:background="#464646"
    tools:context=".RegistryActivity">

    <Button
        android:id="@+id/reg_btn_signin"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#E4D75E"
        android:fontFamily="@font/mitr_bold"
        android:onClick="registrar"
        android:text="@string/reg_btn_signup"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reg_txt_registry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_img_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-450dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/averia_sans_libre_bold"
        android:text="@string/reg_txt_registry"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/reg_img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="451dp"
        android:contentDescription="@string/reg_img_logo"
        app:srcCompat="@drawable/gim_logo" />

    <ImageView
        android:id="@+id/reg_img_return"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/reg_img_return"
        android:onClick="regresarLogin"
        app:srcCompat="@drawable/abc_vector_test" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_txtinput_pass2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="120dp"
        android:background="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_txt_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_txt_password2"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_txtinput_pass"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="186dp"
        android:background="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_txt_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_txtinput_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="252dp"
        android:background="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_txt_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_txtinput_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="319dp"
        android:background="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_txt_name" />
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>